# jastg

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  arc_java_ast_v2.py  pyproject.toml
.github/workflows/: ci.yml
examples/mini_project/com/example/: Bar.java  Baz.java  Foo.java  Qux.java  User.java
examples/mini_project/com/other/: Helper.java  User2.java
src/jastg/: __init__.py  cli.py  config.py  extract.py  logging_config.py  pipeline.py
src/jastg/ast/: __init__.py  collect.py  resolve.py  types.py
src/jastg/graph/: __init__.py  export.py
src/jastg/metrics/: __init__.py  metrics.py
tests/: conftest.py  test_collect.py  test_extract.py  test_graph.py  test_metrics.py  test_pipeline.py  test_resolve.py
